<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="title_welcome_page">Selamat datang di Dicoding Story App!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Login</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="menu_logout">Logout</string>
    <string name="judul_story">Judul Story</string>
    <string name="image_story">Image Story</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="addstorybutton">addStoryButton</string>
    <string name="retry">Retry</string>
    <string name="timeout">Timeout</string>
    <string name="detail_image">Detail Image</string>
    <string name="galeri">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="upload">Upload</string>
    <string name="take_picture">Take Picture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="empty_image">Empty Image</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="login_image">Login Image</string>
    <string name="register_image">Register Image</string>
    <string name="priview_upload_image">Priview Upload Image</string>
    <string name="login_untuk_melihat_story">Login untuk melihat Story</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="location_not_found">Location Not Found</string>
    <string name="location">"Inputkan Lokasi "</string>
    <string name="no_media_selected">No Media Selected</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
</resources>